# git6

./: docker-compose.yaml  main.py  pyproject.toml
consumer/: Dockerfile
nginx/: Dockerfile  nginx.conf
producer/: Dockerfile
